# RigCLang

./: .gitignore  Cargo.toml  README.md
rigc_compiler/: Cargo.toml  README.md
rigc_compiler/src/: analysis.rs  generation.rs  imports.rs  main.rs
rigc_compiler/src/analysis/: functions.rs  structures.rs  text_span.rs  tokens.rs
rigc_compiler/src/generation/: c_code.rs  c_cpp_common.rs
rigc_core/: Cargo.toml
rigc_core/src/: imports.rs  lib.rs  module.rs
rigc_core/src/functions/: function.rs
rigc_core/src/structures/: structure.rs
rigc_parser/: Cargo.toml  rigc.pest
rigc_parser/src/: lib.rs
rigc_vm/: Cargo.toml
rigc_vm/src/: main.rs
rigc_vm_lib/: Cargo.toml
test_data/000_basics/: 1.expected.c  1.rigc
