[package]
name = "rigc_compiler"
version = "0.1.0"
edition = "2021"

[[bin]]
name="rigcc"
path="src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.5.3"
rigc_core = { path = "../rigc_core" }
rigc_parser = { path = "../rigc_parser" }
